# simple-api-lambda-cdk

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  handler.py  requirements.txt  version.py
app/models/: __init__.py  greetings.py  shared.py  version.py
app/routes/: __init__.py  docs.py  version.py
app/routes/greetings/: __init__.py  goodbye.py  goodmorrow.py  hello.py  models.py
app/services/: __init__.py
cdk/: app.py  cdk.json  stack.py
